--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Test Parcel & Vue</title>
 </head>
 <body>
-
+  <div id="app"></div>
+  <script src="./src/index.js"></script>
 </body>
 </html>
